syntax = "proto3";
package messaging;

// Message represents a message emitted by the viot adapters layer.
message Message {
	string channel   = 1;
	string subtopic  = 2;
	string publisher = 3;
	string protocol  = 4;
	bytes  payload   = 5;
	int32  qos       = 6;
	bool   retain    = 7;
	int64  created   = 8; // Unix timestamp in nanoseconds
}

message ToRuleEngineMsg {
string tenantId                 = 1;
bytes tbMsg                     = 2;
repeated string relationTypes   = 3;
string failureMessage           = 4;
}

message TbMsgMetaDataProto {
    map<string,string> data = 1;
}

message TbMsgProto {
    string id                   = 1;
    string relationType         = 2;
    string entityType           = 3;
    string entityId             = 4;
    string ruleChainId          = 5;
    string ruleNodeId           = 6;
    int64 clusterPartition      = 7;
    TbMsgMetaDataProto metaData = 8;
    int32 dataType              = 9;
    string data                 = 10;
    int64 ts                    = 11;
    int32 ruleNodeExecCounter   = 12;
}